updating and adjusting the page window

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dev:all": "concurrently \"vite\" \"wait-on http://localhost:5173 && electron .\""
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.2",
     "@react-pdf-viewer/core": "^3.12.0",
     "@react-pdf-viewer/default-layout": "^3.12.0",
     "@react-pdf-viewer/toolbar": "^3.12.0",
