--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-pdf": "^9.2.1",
+    "react-pdf-highlighter": "^8.0.0-rc.0",
     "react-router-dom": "^7.5.3",
     "tailwindcss": "^4.1.5"
   },
