--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "pdfviewer",
   "version": "0.0.1",
+  "description": "An Electron-based PDF viewer with React and TailwindCSS",
+  "author":"56radius",
   "private": true,
   "type": "module",
   "main": "src/main/index.js",
@@ -10,7 +12,8 @@
     "preview": "vite preview",
     "lint": "eslint .",
     "electron": "electron .",
-    "dev:all": "concurrently \"vite\" \"wait-on http://localhost:5173 && electron .\""
+    "dev:all": "concurrently \"vite\" \"wait-on http://localhost:5173 && electron .\"",
+    "dist": "electron-builder"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.2",
@@ -18,7 +21,6 @@
     "@react-pdf-viewer/default-layout": "^3.12.0",
     "@react-pdf-viewer/toolbar": "^3.12.0",
     "@tailwindcss/vite": "^4.1.5",
-    "electron": "^36.1.0",
     "pdfjs-dist": "^3.11.174",
     "pdfobject": "^2.3.1",
     "react": "^19.0.0",
@@ -34,11 +36,39 @@
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react-swc": "^3.8.0",
     "concurrently": "^8.2.2",
+    "electron": "^36.1.0",
+    "electron-builder": "^26.0.12",
     "eslint": "^9.22.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "vite": "^6.3.1",
     "wait-on": "^7.2.0"
+  },
+  "build": {
+    "appId": "com.pdfviewer.app",
+    "productName": "PdfViewer",
+    "copyright": "© 2025 PdfViewer",
+    "files": [
+      "dist",
+      "src/main",
+      "package.json"
+    ],
+    "directories": {
+      "output": "release"
+    },
+    "asar": true,
+    "extraMetadata": {
+      "main": "src/main/index.js"
+    },
+    "mac": {
+      "target": "dmg"
+    },
+    "win": {
+      "target": "nsis"
+    },
+    "linux": {
+      "target": "AppImage"
+    }
   }
 }
