updated the package.json with docker

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pdfviewer",
   "version": "0.0.1",
   "description": "An Electron-based PDF viewer with React and TailwindCSS",
-  "author":"56radius",
+  "author": "56radius",
   "private": true,
   "type": "module",
   "main": "src/main/index.js",
@@ -21,6 +21,7 @@
     "@react-pdf-viewer/default-layout": "^3.12.0",
     "@react-pdf-viewer/toolbar": "^3.12.0",
     "@tailwindcss/vite": "^4.1.5",
+    "canvas": "^3.1.2",
     "pdfjs-dist": "^3.11.174",
     "pdfobject": "^2.3.1",
     "react": "^19.0.0",
