--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "56radius",
   "private": true,
   "type": "module",
-  "main": "src/main/index.js",
+  "main": "src/main/index.mjs",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
