created a electron main file in the project root and corrected the file path name in the package json file

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "56radius",
   "private": true,
   "type": "module",
-  "main": "src/main/index.js",
+  "main": "electron-main.cjs",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
